@@ -283,7 +283,7 @@ track_auth(struct userNode *user, UNUSED_ARG(struct handle_info *old_handle)) {
 }
 
 static void
-track_user_mode(struct userNode *user, const char *mode_change) {
+track_user_mode(struct userNode *user, const char *mode_change, UNUSED_ARG(void *extra)) {
        if (!track_cfg.enabled) return;
        if (user->uplink->burst && !track_cfg.show_bursts) return;
        if (!mode_change[1]) return; /* warning there has to be atleast one char in the buffer */
@@ -665,7 +665,7 @@ track_init(void) {
     reg_del_user_func(track_del_user, NULL);
     reg_auth_func(track_auth);
     reg_channel_mode_func(track_channel_mode, NULL);
-    reg_user_mode_func(track_user_mode);
+    reg_user_mode_func(track_user_mode, NULL);
     reg_oper_func(track_oper, NULL);
     opserv_define_func("TRACK", cmd_track, 800, 0, 0);
     opserv_define_func("DELTRACK", cmd_deltrack, 800, 0, 0);
